# ENPM-673

Homework1/Q2/: CMakeLists.txt  README.md  bnr.sh  build.sh  main.cpp  setup.sh
Homework1/Q2/kernels/: CMakeLists.txt  helper.cu
MidTerm/: README.md  aswath.tex  requirements.txt
MidTerm/code/: question1.py  question2.py  question3.py  question4.py  utils.py
Project1/: README.md  requirements.txt
Project1/code/: extracredit.py  solution.py  utils.py  utils2.py
Project1/docs/: report.tex
Project2/: README.md
Project2/code/: lanepredictor.py  solution.py  utils.py
Project2/docs/: report.tex
Project3/: README.md
Project3/code/: libs.py  solution.py  utils.py
Project3/docs/: report.tex
